fix panel overlap

--- a/picturepanelsapp/src/gameboard/Panel.css
+++ b/picturepanelsapp/src/gameboard/Panel.css
@@ -8,7 +8,6 @@
   text-align: center;
   align-items: center;
   justify-content: center;
-  z-index: 30;
 }
 
 .panel .panelBackground {
